fix: [WA-861] Fix colour and spacing in hero standfirst

--- a/docroot/themes/custom/wateraid/components/hero/hero.scss
+++ b/docroot/themes/custom/wateraid/components/hero/hero.scss
@@ -137,6 +137,25 @@
       p {
         margin: 0;
       }
+
+      h2, h3, a {
+        color: $wa-white;
+      }
+      
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      blockquote {
+        padding-bottom: $wa-spacing-07;
+      }
+
+      p,
+      ul,
+      ol {
+        padding-bottom: $wa-spacing-06;
+      }
     }
 
     &--ctas {
